<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:minWidth="300dp"
    android:padding="12dp"
    android:animateLayoutChanges="true">

    <TextView
        android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
        android:id="@+id/rate_message_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:gravity="center"
        android:text="@string/rate_dialog_message"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <RatingBar
        style="@style/Rate_Dialog_CustomRatingBar"
        android:id="@+id/rate_ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1" />

    <TextView
        android:id="@+id/rate_description_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textColor="@color/rate_dialog_grey_800"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="I liked it"/>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="@dimen/rate_dialog_button_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:animateLayoutChanges="true" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/rate_dialog_cancel_button"
        android:textAllCaps="true" />

    <CheckBox
        android:id="@+id/never_show_again_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_dialog_never_show_again"
        android:textSize="13sp" />

</LinearLayout>